# mcp-ros-diagnosis

./: .gitignore  DEPLOYMENT.md  PRD.md  README.md  pyproject.toml
config/: servers.yaml
docs/: memory-system-design.md
src/manastone_diag/: config.py  launcher.py  server.py  ui.py
src/manastone_diag/dds_bridge/: __init__.py  cache.py  mock_scenarios.py  subscriber.py
src/manastone_diag/extensions/: registry.py
src/manastone_diag/motion/: __init__.py  interpreter.py
src/manastone_diag/orchestrator/: diagnostic.py
src/manastone_diag/pid_tuning/: agent_loop.py  experiment.py
src/manastone_diag/resources/: joints.py
src/manastone_diag/schema/: loader.py
src/manastone_diag/semantic/: __init__.py  state_to_text.py
src/manastone_diag/servers/: base.py  pid_tuner.py
tests/: test_basic.py  test_extensions.py
