[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manastone-diagnostic"
version = "0.1.0"
description = "Manastone Diagnostic MVP — G1 语义化运维诊断工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manastone Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "cyclonedds>=0.10.0",
    "gradio>=4.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
manastone-diag = "manastone_diag.server:main"
manastone-ui = "manastone_diag.ui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/manastone_diag"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
